k8s/staging/api-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-portal
  namespace: staging
  labels:
    app: api-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-portal
  template:
    metadata:
      labels:
        app: api-portal
    spec:
      containers:
        - name: api-portal
          image: nishlashakya/api-portal:0.0.9
          imagePullPolicy: Always
          ports:
            - containerPort: 80
