k8s/staging/api-portal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-portal
  name: api-portal
  namespace: staging
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: api-portal
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
